--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy==1.26.4
-opencv-python==4.12.0.0
-dlib==19.24.2
-scikit-learn==1.4.1.post1
-scikit-image==0.22.0
-tqdm==4.66.2
+numpy
+opencv-python
+dlib
+scikit-learn
+scikit-image
+tqdm
+matplotlib
